[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/Character/Character.gd" type="Script" id=1]

[node name="Character" type="KinematicBody2D"]
collision_mask = 1027
script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]

[node name="Bullet_spawn" type="Node2D" parent="Body"]

[node name="StandingCircle" type="Area2D" parent="Body"]

[node name="Shape2D" type="CollisionShape2D" parent="Body/StandingCircle"]

[node name="RotateCooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="ShootCooldown" type="Timer" parent="."]
[connection signal="mouse_entered" from="Body/StandingCircle" to="." method="_on_StandingCircle_mouse_entered"]
[connection signal="mouse_exited" from="Body/StandingCircle" to="." method="_on_StandingCircle_mouse_exited"]
[connection signal="timeout" from="RotateCooldown" to="." method="_on_RotateCooldown_timeout"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_ShootCooldown_timeout"]
